# ProjectOR

./: .gitignore  README.md  docker-compose.yml
backend/app/: .env.example  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml
backend/app/data_access/: auth.py
backend/app/dependencies/: auth.py  database.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 1722e1790137_fix_project_is__fields.py  2214619bb37b_add_relationship_for_project_table.py  43d4892b1544_add_feedback_column_application.py  4a5a08b74a58_add_user_role_field.py  6839b23576cf_.py  6e2af57b2c75_change_date_to_datetime_format.py  843428e10d39_add_applications_project_member_edit_.py  9486dd2901de_remove_level_user_field.py  d48f4d45faf0_.py  e846313bfb35_add_brief_description_and_create_2_.py
backend/app/models/: __init__.py  applications.py  project_member.py  project_tags.py  projects.py  tags.py  users.py
backend/app/routes/: router.py
backend/app/routes/api/: router.py
backend/app/routes/api/auth/: router.py
backend/app/routes/api/health_check/: router.py  service.py
backend/app/routes/api/heath_check/: router.py
backend/app/routes/api/project/: data_access.py  exceptions.py  router.py  schemas.py  service.py
backend/app/routes/api/project/__tests__/: test_router.py  test_service.py
backend/app/routes/api/tag/: data_access.py  router.py  schemas.py  service.py
backend/app/routes/api/user/: data_access.py  router.py  schemas.py  service.py
backend/app/schemas/: agent_response.py  generic.py  user.py
backend/app/services/: ai_agent.py  auth.py
(+90 files in other folders)
