[project]
name = "app"
version = "0.1.0"
description = "ProjectOR Backend Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
